priv/css/main.css
body, form {
    margin: 0px;
}

body, input {
    font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif;
}

input:focus {
    outline: none;
}

section, p {
    text-align: justify;
}

a {
    text-decoration: none;
    color: #000000;
}

a:visited {
    color: #000000;
}

a:hover {
    text-decoration: none;
}

#sidenav {
    height: 100%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #C33F35;
    transition: 0.3s;
    padding: 0px;
    margin: 0px;
    color: #ffffff;
    display: flex;
    flex-direction: column;
}

#sidenav.nav {
    width: 300px;
    visibility: visible;
}

#sidenav.no-nav {
    width: 0px;
    z-index: 0;
    visibility: hidden;
}

#sidenav ul {
    padding-left: 10px;
}

#sidenav ul li {
    list-style-type: none;
    line-height: 27px;
}

#sidenav a {
    font-size: 1.0em;
    color: #f1f1f1;
    transition: 0.3s;
}

#sidenav a:hover {
    text-shadow: 0 0 3px #fff;
    color: #fff;
}

#sidenav form {
    padding: 10px 10px 0px 10px;
}

#sidenav-title {
    margin: 23px 0 10px 30px;
}

#sidenav-title h1 {
    font-size: 1.5em;
    margin: 5px 0px;
}

#sidenav-title h2 {
    font-size: 1em;
    margin: 5px 0px;
}

#sidenav-modules {
    margin: 0px;
    overflow-x: hidden;
    overflow-y: scroll;
    flex: 1 1 0.0%;
    padding-bottom: 50px;
}

#sidenav-modules a {
    padding: 8px 8px 8px 32px;
}

#search a {
    color: #333333;
    transition: none;
}

#search a:hover {
    color: #333333;
    text-shadow: none;
}

#search .autocomplete {
    /*the container must be positioned relative:*/
    position: relative;
    display: inline-block;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
}

#search-query {
    height: 30px;
    border: none;
    border-radius: 3px;
    padding: 0px 30px 0px 15px;
    font-size: 1em;
    width: 100%;
}

#search .autocomplete-items {
    position: absolute;
    border-top: 1px solid #d4d4d4;
    z-index: 99;
    /*position the autocomplete items to be the same width as the container:*/
    top: 28px;
    left: 0;
    right: 0;
    overflow: auto;
}

#search .autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: #eee;
}

#search .autocomplete-items div span {
    display: block;
    color: #777;
}

#search .autocomplete-items div strong {
    color: #C33F35;
}

#search .autocomplete-items div:hover,
#search div.autocomplete-active {
    border-left: 5px solid #666;
    background-color: #ccc;
}

#hide-nav-button, #show-nav-button {
    position: absolute;
    top: 14px;
    font-size: 20px;
    line-height: 20px;
    cursor: pointer;
}

#hide-nav-button {
    right: 15px;
    color: #333;
}

#show-nav-button {
    left: 15px;
    transition: visibility 0s, opacity 0.5s linear;
}

#show-nav-button.nav {
    visibility: hidden;
    opacity: 0;
}

#show-nav-button.no-nav {
    visibility: visible;
    opacity: 1;
}

#main {
    transition: margin-left .5s;
    padding: 0px;
    margin: 0px;
}

#main.nav {
    margin-left: 300px;
}

#main.no-nav {
    margin-left: 0px;
}

#content {
    max-width: 829px;
    margin: 0 auto;
    padding: 3px 60px;
}

#content p a {
    color: #C33F35;
    font-weight: bold;
    text-decoration: none;
}

#content p a:visited {
    color: #ce9393;
}

#content p a:hover {
    text-decoration: underline;
}


#content h1 {
    font-size: 2.0em;
    margin: 40px 0px 20px 0px;
}

#summary ul {
    padding: 0px;
}

#summary ul li {
    list-style-type: none;
    margin: 10px 0px;
}

#summary .synopsis {
    color: #666;
    margin-top: 10px;
    padding-left: 20px;
    font-style: italic;
}

.signature, .definition {
    margin: 5px 0px 0px 0px;
    font-family: Menlo, Courier, monospace;
}

.signature {
    font-size: 0.9rem;
    font-weight: bold;
}

.definition {
    font-size: 0.7rem;
    color: #666;
}

#functions h2, #types h2 {
    background: #EEE;
    padding: 10px;
    border-left: #C33F35 3px solid;
}

